--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 			<hr/>
-			<div class="container">
+			<div class="container" v-show="table.length > 0">
 				<div class="card">
 					<div class="card-body">
 						<div class="table-responsive">
